Fixed "become a tutor" page on mobile (6)

--- a/css/become-tutor.css
+++ b/css/become-tutor.css
@@ -424,7 +424,7 @@
 
 @media (max-width: 700px) {
     .mini-stat.highlight span {
-        font-size: 2.34rem !important;
+        font-size: 2.1rem !important;
         line-height: 0.9 !important;
         letter-spacing: -0.04em !important;
     }
